--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start &  json-server --watch db.json --port 3004",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject"
