--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start &  json-server --watch db.json --port 3004",
-    "android": "expo start --android &  json-server --watch db.json --port 3004",
-    "ios": "expo start --ios &  json-server --watch db.json --port 3004",
+    "start": "expo start ",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "eject": "expo eject"
   },
   "dependencies": {
     "expo": "^32.0.0",
-    "firebase": "^5.8.4",
     "moment": "^2.24.0",
-    "native-base": "^2.12.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
