--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,7 +138,23 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
-}
+    api project(':expo-core')
+    api project(':expo-firebase-analytics')
+    api project(':expo-firebase-app')
+    api project(':expo-firebase-auth')
+    api project(':expo-firebase-crashlytics')
+    api project(':expo-firebase-database')
+    api project(':expo-firebase-firestore')
+    api project(':expo-firebase-functions')
+    api project(':expo-firebase-instance-id')
+    api project(':expo-firebase-invites')
+    api project(':expo-firebase-links')
+    api project(':expo-firebase-messaging')
+    api project(':expo-firebase-notifications')
+    api project(':expo-firebase-performance')
+    api project(':expo-firebase-remote-config')
+    api project(':expo-firebase-storage')
+  }
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
