--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event_countdown",
+  "name": "eventCountdown",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start ",
