--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-native-action-button": "^2.8.5",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-vector-icons": "^6.3.0",
-    "react-navigation": "^3.3.0"
+    "react-navigation": "^3.3.0",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
