--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
