--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
