--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,42 +1,54 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+  source 'https://github.com/CocoaPods/Specs.git'
+  platform :ios, '10.2'
 
 target 'event_countdown' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
   # Pods for event_countdown
+    pod 'ExpoKit',
+      :git => "http://github.com/expo/expo.git",
+      :tag => "ios/2.7.0",
+      :subspecs => [
+        "Core"
+      ],
+      :inhibit_warnings => true
+      
+    pod 'EXCore',
+      :path => "../node_modules/expo/node_modules/expo-core/ios",
+      :inhibit_warnings => true
   # Bacon: Start Custom Modules (Firebase)
        pod 'EXFirebaseApp',
-          path: '../node_modules/expo-firebase-app/ios'
+          :path => '../node_modules/expo-firebase-app/ios'
         pod 'EXFirebaseAnalytics',
-          path: '../node_modules/expo-firebase-analytics/ios'
+          :path => '../node_modules/expo-firebase-analytics/ios'
         pod 'EXFirebaseAuth',
-          path: '../node_modules/expo-firebase-auth/ios'
+          :path => '../node_modules/expo-firebase-auth/ios'
         pod 'EXFirebaseCrashlytics',
-          path: '../node_modules/expo-firebase-crashlytics/ios'
+          :path => '../node_modules/expo-firebase-crashlytics/ios'
         pod 'EXFirebaseDatabase',
-          path: '../node_modules/expo-firebase-database/ios'
+          :path => '../node_modules/expo-firebase-database/ios'
         pod 'EXFirebaseFirestore',
-          path: '../node_modules/expo-firebase-firestore/ios'
+          :path => '../node_modules/expo-firebase-firestore/ios'
         pod 'EXFirebaseFunctions',
-          path: '../node_modules/expo-firebase-functions/ios'
+          :path => '../node_modules/expo-firebase-functions/ios'
         pod 'EXFirebaseInstanceID',
-          path: '../node_modules/expo-firebase-instance-id/ios'
+          :path => '../node_modules/expo-firebase-instance-id/ios'
         pod 'EXFirebaseLinks',
-          path: '../node_modules/expo-firebase-links/ios'
+          :path => '../node_modules/expo-firebase-links/ios'
         pod 'EXFirebaseInvites',
-          path: '../node_modules/expo-firebase-invites/ios'
+          :path => '../node_modules/expo-firebase-invites/ios'
         pod 'EXFirebaseMessaging',
-          path: '../node_modules/expo-firebase-messaging/ios'
+          :path => '../node_modules/expo-firebase-messaging/ios'
         pod 'EXFirebaseNotifications',
-          path: '../node_modules/expo-firebase-notifications/ios'
+          :path => '../node_modules/expo-firebase-notifications/ios'
         pod 'EXFirebasePerformance',
-          path: '../node_modules/expo-firebase-performance/ios'
+          :path => '../node_modules/expo-firebase-performance/ios'
         pod 'EXFirebaseRemoteConfig',
-          path: '../node_modules/expo-firebase-remote-config/ios'
+          :path => '../node_modules/expo-firebase-remote-config/ios'
         pod 'EXFirebaseStorage',
-          path: '../node_modules/expo-firebase-storage/ios'
+          :path => '../node_modules/expo-firebase-storage/ios'
     # Bacon: End Custom Modules
   target 'event_countdown-tvOSTests' do
     inherit! :search_paths
