--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
+    "react-navigation-redux-helpers": "^3.0.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
