--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.6.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.1.tar.gz",
     "react-native-action-button": "^2.8.5",
+    "react-native-linear-gradient": "^2.5.3",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
